create edit fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="add_ingredient_label">Add ingredient</string>
     <string name="add_button">Add</string>
     <string name="edit_button">Edit</string>
+    <string name="delete_button">Delete</string>
 </resources>
