Add get image from photo and phone storage

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="add_button">Add</string>
     <string name="edit_button">Edit</string>
     <string name="delete_button">Delete</string>
+    <string name="add_new_cocktail">Add New Cocktail</string>
 </resources>
